--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,8 @@ github_username:  jekyll
 
 # Build settings
 markdown: kramdown
-plugins:
-  - jekyll-feed
+plugins: []
+  #  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
