Fix issue that doesn't be generated a sitemap

--- a/_config.yml
+++ b/_config.yml
@@ -34,6 +34,7 @@ google_analytics: UA-153578785-1
 markdown: kramdown
 plugins:
   - jekyll-feed
+  - jekyll-sitemap
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
