--- a/_config.yml
+++ b/_config.yml
@@ -26,8 +26,10 @@ description: >- # this means to ignore newlines until "baseurl:"
   参加費は無料です！
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-# twitter_username: jekyllrb
-# github_username:  jekyll
+twitter_username: CoderDojoUTM
+facebook_username: coderdojo.utsunomiya
+github_username:  coderdojo-utsunomiya
+rss: true
 google_analytics: UA-153578785-1
 
 # Build settings
