--- a/_config.yml
+++ b/_config.yml
@@ -25,7 +25,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   さあ、あなたも CoderDojo の門をたたいてみませんか？
   参加費は無料です！
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://coderdojo-utsunomiya.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: CoderDojoUTM
 facebook_username: coderdojo.utsunomiya
 github_username:  coderdojo-utsunomiya
