--- a/_config.yml
+++ b/_config.yml
@@ -24,6 +24,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   主役は子どもたち自身です。
   さあ、あなたも CoderDojo の門をたたいてみませんか？
   参加費は無料です！
+timezone: Asia/Tokyo
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://coderdojo-utsunomiya.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: CoderDojoUTM
